Code Cleanup/ Remove Product Repository/ Single Controller